--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="./src/assets/images/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitFreak</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       charset="UTF-8"
@@ -15,7 +15,7 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
+    /> -->
   </head>
   <body>
     <div id="root"></div>
