--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/images/Logo.png" />
+    <link rel="icon" type="image/png" href="./assets/images/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FitFreak</title>
+    <title>Fitiac</title>
     <link
       rel="stylesheet"
       type="text/css"
